2013-06-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/show.c src/unset.c:  show/unset individual datafile options.

	* docs/gnuplot.doc src/specfun.c:  Documentation shows incorrect sign
	in the exponent of the Voigt function.  

	* docs/gnuplot.doc: typos

2013-06-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c (fit_command):  Log file contained the wrong variable name
	for axis restrictions.  Reported by Victor Slabinski on gnuplot-bugs.

	* src/fit.c:  Make Ctrl-C interrupt fits in Windows console mode gnuplot
	again.

2013-06-05  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Allow building against either Qt4 or Qt5.
	./configure --with-qt		# Try Qt5 first, fall back to Qt4
	./configure --with-qt=qt4	# Prefer Qt4 to Qt5 even if present
	Note: On my machine use of Qt5 also requires compiler option -fPIC, but
	I have not added this to configure.in.

	* src/qtterminal/{qt_term.cpp QtGnuplotWindow.h QtGnuplotWidget.cpp
	QtGnuplotWidget.h}:  Trivial changes to #include statements required by 
	Qt4->Qt5 module organization. 
	QString::toAscii is deprecated.  Use toUtf8 or toLatin1 as appropriate.

	* src/qtterminal/QtGnuplotScene.cpp (processEvent positionText):
	Older APIs for transformations (rotate/translate/scale) have been removed
	in Qt5.  The new ones seem to work OK in 4.6 also, so I have replaced the
	old ones unconditionally.  If this causes problems we could choose old or
	new based on QT_VERSION.

	* src/scanner.c src/util.c src/util.h:  Allow UTF8 identifiers.

	* src/internal.c (f_range): Allow "string"[x:x] where x is real rather
	than int.   This makes it more convenient to use column data as an index.

2013-06-02  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wprinter.c (PrintDlgProc):  Safeguard against unavailable
	printer info.
	Bug 1152.

	* src/win/wprinter.c (DumpPrinter):  Make this similar to the code in 
	CopyPrint (wgraph.c) which is supposed to work more reliably.
